# ros2-rust-wasm-dashboard

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  ros2-demo.yml
crates/bridge/: Cargo.toml
crates/bridge/src/: lib.rs
crates/fake_robot_state/: Cargo.toml
crates/fake_robot_state/src/: lib.rs
crates/ros2_demo/: Cargo.toml
crates/ros2_ws_bridge/: Cargo.toml
crates/ros2_ws_bridge/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
fixtures/: replay.sh
scripts/: setup.sh
web/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: main.test.ts  main.ts
web/src/ui/: live-log.ts  metric-card.ts  mini-chart.ts  robot-map.ts  status-pill.ts  topology.ts
