[package]
name = "ros2_ws_bridge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# ROS 2 Rust
rclrs = "0.5"

# Web server & WebSocket
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# JSON / 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 統計 / 共享狀態
parking_lot = "0.12"
thiserror = "1.0"

# 日誌（可選）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
